@@ -191,7 +191,7 @@ public class ImageUtil
         List<String> errors = new ArrayList<>();
         Document document = JSoupUtil.convertHtmlToDocument(html, true, errors);
         if (!errors.isEmpty())
-            throw new RuntimeException(errors.get(0));
+            throw new RuntimeException(errors.getFirst());
         return renderThumbnail(webImage(context, document, baseURI, WEB_IMAGE_WIDTH, WEB_IMAGE_HEIGHT));
     }
 
